--- a/_posts/2021-05-06-cpp-basic.md
+++ b/_posts/2021-05-06-cpp-basic.md
@@ -11,8 +11,8 @@ permalink: /blog/
 usemathjax: true
 ---
 
-## C++ 기본 [변수와 자료형 정리]
-
+ # C++ 기본 [변수와 자료형 정리]
+===============================
 ``` cpp
     //int : 자료형
     // i : 변수
@@ -21,20 +21,20 @@ usemathjax: true
 ```
 * 변수선언
 
-- 자료형 : 언어에서 지정한 변수가 어떠한 형태를 가지고 있는지 알려준다.
+> - 자료형 : 언어에서 지정한 변수가 어떠한 형태를 가지고 있는지 알려준다.
 
-- 자료형에는 크게 정수형과 실수형 2가지가 있다.
+>   > - 자료형에는 크게 정수형과 실수형 2가지가 있다.
 
-- 정수형: int(4), long(8), short(2), char(1), boolean(1 bit)
-- 실수형 : float (4), double(8)
+>   > - 정수형: int(4), long(8), short(2), char(1), boolean(1 bit)
+>   > - 실수형 : float (4), double(8)
 
-+ 자료형의 크기는 자료형이 나타낼 수 있는 수의 크기를 말한다.
+> + 자료형의 크기는 자료형이 나타낼 수 있는 수의 크기를 말한다.
 
-+ 예를 들어 character(char)는 1 byte이므로 8bit = 256 개를 표현 할 수 있다.
+> + 예를 들어 character(char)는 1 byte이므로 8bit = 256 개를 표현 할 수 있다.
 
-+ 즉 char는 -127~128까지 표시가 가능하다
+> + 즉 char는 -127~128까지 표시가 가능하다
 
-+ 만약 양수만 이용하고 싶다면 unsigned선언을 해줘야한다.
+> + 만약 양수만 이용하고 싶다면 unsigned선언을 해줘야한다.
 
 ``` cpp
     //일반 선언
@@ -43,4 +43,38 @@ usemathjax: true
     unsigned char c = 0;
 ```
 
-만약
+### 만약 저장할 수 있는 크기 보다 훨씬 더 큰 크기를 넣어주면 어떻게 될까?
+
+> ``` cpp
+>   unsigned char c = 0;
+>   c = 256;
+>   std::cout<<c<<std::endl;
+> ```
+
+이런 코드를 실행하면 **아무것도 나오지 않는다**
+
+왜냐하면 unsigned char 8bit이고 256을 표현하기 위해서 9bit가 필요하다 그렇기 때문에 character로 나타낼수 있는 부분만 표현하게 된다.(즉, 8bit가 모두 0이되므로 0의값을 갖는다)
+
+그럼 음수의 경우는 어떠할까? 음수는 먼저 컴퓨터가 어떻게 음수를 표현하는지 알아야한다.
+
+### 컴퓨터의 음수표현
+
+컴퓨터는 MSB(Most Significant Bit)를 이용하여 수의 음수와 양수를 나눈다. 
+
++ 양수: 0xxx xxxx 
++ 음수: 1xxx xxxx
+
+그럼 단순히 양수처럼 음수도 1 111 1111이 -127이 될까?
+
+답은 **아니다**
+
+컴퓨터는 음수를 계산하는 방법은 덧셈을 이용한다. '127에 무엇을 더하면 0이될까?' 라는 문제에 대한 해답을 구한다
+
+이를 2진법으로 표현으로 하면 '0111 1111에 무엇을 더하면 0이 될까?'
+
+그래서 위의 내용을 이용해 문제를 풀면
+
+0111 1111 + 1000 0001  = 0 이된다(1 0000 0000 이지만, 1은 8비트를 초과함으로 잘려 0으로 표기된다.)
+
+즉 -127은 1000 0001이다.
+
