--- a/_posts/2021-05-06-cpp-basic.md
+++ b/_posts/2021-05-06-cpp-basic.md
@@ -78,3 +78,8 @@ usemathjax: true
 
 즉 -127은 1000 0001이다.
 
+같은 방식으로 계산하면 -1은 1111 1111 이다.
+
+(이러한 계산을 하는 방법을 2의 보수법 이라 한다.)
+(각자리의 0을 1로, 1은 0으로 바꾼뒤 1을 더해준다.)
+ 
