--- a/_posts/2021-04-27-bit-oper.md
+++ b/_posts/2021-04-27-bit-oper.md
@@ -7,7 +7,7 @@ date: '2021-04-27 12:35:23 +0900'
 category: cpp
 thumbnail: /assets/img/posts/bitoper.PNG
 keywords: cpp, basic, bit operator
-permalink: /blog/
+permalink: /blog/bit/
 usemathjax: true
 ---
 
