--- a/_posts/2021-05-06-cpp-basic.md
+++ b/_posts/2021-05-06-cpp-basic.md
@@ -7,7 +7,7 @@ date: '2021-05-06 12:35:23 +0900'
 category: cpp
 thumbnail: /assets/img/posts/bitoper.PNG
 keywords: cpp, basic, variable, data type
-permalink: /blog/variable
+permalink: /blog/cpp/variable/
 usemathjax: true
 ---
 
@@ -42,7 +42,14 @@ usemathjax: true
     //양수 선언
     unsigned char c = 0;
 ```
-
+- 변수의 종류
+    1. 지역변수
+        - 함수내에 선언된 변수
+    2. 전역변수
+        - 함수밖에 선언된 변수
+    3. 정적변수
+        - 메모리에 선점되어있는 변수(메모리 구조를 이해해야함) static키워드 사용
+    4. 외부변수
 ### 만약 저장할 수 있는 크기 보다 훨씬 더 큰 크기를 넣어주면 어떻게 될까?
 
 > ``` cpp
